[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ffx"
version = "1.0.0"
description = "A beautiful, intuitive wrapper for ffmpeg with smart defaults and helpful guidance."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["ffmpeg", "video", "audio", "converter", "wrapper", "cli"]
authors = [
  {name = "Leo Sternlicht"}
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "humanize>=3.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]

[project.scripts]
ffx = "ffx:cli"

[tool.setuptools]
py-modules = ["ffx"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
